<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:focusableInTouchMode="false">

    <ImageView
        android:id="@+id/adapter_imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_description"
        android:padding="8dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/product_name_adapter_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/home_product_name"
        android:textSize="26sp"
        android:layout_gravity="left"
        android:text="@string/product_adapter_name"/>

    <TextView
        android:id="@+id/product_price_adapter_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/home_product_name"
        android:textSize="26sp"
        android:layout_gravity="left"
        android:text="@string/product_adapter_price"/>

</LinearLayout>
